--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "qrcode": "^1.4.1"
   }
 }
