--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.6.11",
-    "morgan": "~1.9.1",
-    "nodemon": "^1.19.2"
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.11",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.0",
     "morgan": "~1.9.1",
+    "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
